# ADA502-kode

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init-database.d  init.sql  pyproject.toml
.github/actions/cache-custom-action/: action.yml
.github/actions/python-poetry-installation-action/: action.yaml
.github/workflows/: test_workflow.yaml
data/: postmaster.pid
data/base/1/: 2619  2696  2840  2841  pg_internal.init
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
src/: main.py
src/API/db/: conDeconDb.py
src/API/db/auth/: auth.py
src/API/db/firerisk/: crud.py  models.py
src/API/db/login/: auth.py  crud.py  database.py  models.py  schemas.py
src/API/web/: web.py
src/API/web/templates/: location.html  login.html  my_page.html  show_data.html
src/frcm/: frcapi.py
src/frcm/api/: data_base_models.py
src/frcm/datamodel/: model.py  utils.py
src/frcm/fireriskmodel/: preprocess.py
src/frcm/weatherdata/: .env  client.py  client_met.py  extractor.py  extractor_met.py
src/web/: web.py
src/web/templates/: location.html
tests/: test_client_met.py  test_database.py  test_docker.py
